--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -28,6 +28,9 @@ $color-616161: #616161 !default;
 $color-8a8a8a: #8a8a8a !default;
 $border: 1px solid rgba(0, 0, 0, 0.09);
 
+$navbar-no-collapse: 210px;
+$navbar-collapse: 64px;
+
 // 圆角
 $radius-4: 4px !default;
 $radius-2: 2px !default;
