--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,10 +1,11 @@
 body {
   box-sizing: border-box;
   width: 100%;
-  min-width: 1200px;
+  min-width: 990px;
   height: 100%;
   font: 12px/1.5 Microsoft YaHei, Microsoft YaHei-Regular, sans-serif;
   color: $color-616161;
+  //overflow-x: hidden;
 }
 
 #app {
