--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,7 +1,7 @@
 body {
   box-sizing: border-box;
   width: 100%;
-  min-width: 990px;
+  //min-width: 990px;
   height: 100%;
   font: 12px/1.5 Microsoft YaHei, Microsoft YaHei-Regular, sans-serif;
   color: $color-616161;
